--- a/flashcard-style.css
+++ b/flashcard-style.css
@@ -1,3 +1,17 @@
 /*
 TODO(you): Write any additional styles you need here.
 */
+.flashcard-box .word{
+    animation:showcard 0.5s;
+}
+
+@keyframes showcard{
+    from {
+        height:0;
+        top:292px;
+    }
+    to {
+        height:292px;
+        top:0;
+    }
+}
